# aeron-poc

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
schema/: messages.xml
scripts/: run_archive_test.sh  run_integration_test.sh  run_udp_test.sh  start_archive_media_driver.sh  start_media_driver.sh
src/: consumer.cpp  producer.cpp  recorder.cpp  recorder.h
tests/: test_recorder.cpp
